--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~bootstrap-icons/font/bootstrap-icons.css';
 
 .sidebar {
     position: fixed;
@@ -17,4 +18,8 @@
 .sidebar .nav-link {
     font-weight: 500;
     color: #333;
+}
+.sidebar .nav-link .bi {
+    font-size: 1.3em;
+    margin-right: 0.3em;
 }
