--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,25 +1,1 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
-@import '~bootstrap-icons/font/bootstrap-icons.css';
-
-.sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 100;
-    padding: 48px 0 0;
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
-}
-
-.sidebar-heading {
-    font-size: .75rem;
-}
-
-.sidebar .nav-link {
-    font-weight: 500;
-    color: #333;
-}
-.sidebar .nav-link .bi {
-    font-size: 1.3em;
-    margin-right: 0.3em;
-}
+@import './theme.scss'
