--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -4,72 +4,6 @@
 
 {% block body %}
 
-
-
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Company name</a>
-    <div class="navbar-nav">
-        <div class="nav-item text-nowrap">
-            <a class="nav-link px-3" href="#">Sign out</a>
-        </div>
-    </div>
-</header>
-
-<div class="container-fluid">
-    <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-            <div class="position-sticky pt-3 sidebar-sticky">
-                <div class="accordion">
-                    <div class="accordion-item">
-                        <div class="accordion-header">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePosting" aria-controls="collapsePosting">
-                                POSTING
-                            </button>
-                        </div>
-                        <div class="accordion-collapse show" id="collapsePosting">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">
-                                        <i class="bi bi-envelope-open"></i>
-                                        Drafts
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <i class="bi bi-alarm"></i>
-                                        Planned
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <i class="bi bi-globe"></i>
-                                        Published
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <i class="bi bi-trash3"></i>
-                                        Bin
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <div class="accordion-header">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSettings" aria-expanded="true" aria-controls="collapseSettings">
-                                SETTINGS
-                            </button>
-                        </div>
-                        <div class="accordion-collapse collapse" id="collapseSettings">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>    
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        </main>
-    </div>
-</div>
+<div {{ react_component('AppComponent') }}></div>
 
 {% endblock %}
